[gd_scene load_steps=60 format=2]

[ext_resource path="res://Player/Player2.gd" type="Script" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/SwordHitbox.gd" type="Script" id=4]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=6]
[ext_resource path="res://Music and Sounds/Swipe.wav" type="AudioStream" id=7]
[ext_resource path="res://Music and Sounds/Evade.wav" type="AudioStream" id=8]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/StaminaUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://Player/DemonPlayerAnimations.png" type="Texture" id=12]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 4.0

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=11]
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=13]
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=14]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=15]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=16]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=17]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 23 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 24 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 25 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 26 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "RollDown"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "RollUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=32]
blend_point_0/node = SubResource( 28 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 29 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 30 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 31 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=37]
blend_point_0/node = SubResource( 33 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 34 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 35 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 36 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachine" id=44]
states/Attack/node = SubResource( 22 )
states/Attack/position = Vector2( 356, 210 )
states/Idle/node = SubResource( 27 )
states/Idle/position = Vector2( 356, 105 )
states/Roll/node = SubResource( 32 )
states/Roll/position = Vector2( 356, 8 )
states/Run/node = SubResource( 37 )
states/Run/position = Vector2( 534, 105 )
transitions = [ "Idle", "Run", SubResource( 38 ), "Run", "Idle", SubResource( 39 ), "Idle", "Attack", SubResource( 40 ), "Attack", "Idle", SubResource( 41 ), "Roll", "Idle", SubResource( 42 ), "Idle", "Roll", SubResource( 43 ) ]
start_node = "Idle"
graph_offset = Vector2( 120, -26.492 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=45]

[sub_resource type="CapsuleShape2D" id=46]
height = 12.0

[sub_resource type="CapsuleShape2D" id=47]
radius = 5.0
height = 19.3329

[sub_resource type="Animation" id=48]
resource_name = "Start"
length = 0.2
loop = true

[sub_resource type="Animation" id=49]
resource_name = "Stop"
length = 0.1

[node name="Player2" type="KinematicBody2D"]
position = Vector2( -0.298317, -0.994396 )
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -0.57238, 6.99128 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 12 )
hframes = 16
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.40583, 6.62848 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 2 )
anims/AttackLeft = SubResource( 3 )
anims/AttackRight = SubResource( 4 )
anims/AttackUp = SubResource( 5 )
anims/IdleDown = SubResource( 6 )
anims/IdleLeft = SubResource( 7 )
anims/IdleRight = SubResource( 8 )
anims/IdleUp = SubResource( 9 )
anims/RollDown = SubResource( 10 )
anims/RollLeft = SubResource( 11 )
anims/RollRight = SubResource( 12 )
anims/RollUp = SubResource( 13 )
anims/RunDown = SubResource( 14 )
anims/RunLeft = SubResource( 15 )
anims/RunRight = SubResource( 16 )
anims/RunUp = SubResource( 17 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 44 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 45 )
parameters/Attack/blend_position = Vector2( 0, 1 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Roll/blend_position = Vector2( 0, 1 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="HitboxPivot" type="Position2D" parent="."]
visible = false
position = Vector2( -0.135275, 2.35792 )
rotation = 1.5708

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
position = Vector2( 15, 0 )
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
shape = SubResource( 46 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.5411, -4.27055 )
shape = SubResource( 47 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 48 )
anims/Stop = SubResource( 49 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.35, 1.35 )
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource( 10 )]
margin_right = 119.0
margin_bottom = 48.0

[node name="StaminaUI" parent="CanvasLayer" instance=ExtResource( 11 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="canLoseAgain" from="CanvasLayer/StaminaUI" to="." method="_on_StaminaUI_canLoseAgain"]
[connection signal="canRegen" from="CanvasLayer/StaminaUI" to="." method="_on_StaminaUI_canRegen"]

[editable path="HitboxPivot/SwordHitbox"]

[editable path="Hurtbox"]
